k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: demo
spec:
  selector:
    app: spring
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
